--- a/html/struct/label.html
+++ b/html/struct/label.html
@@ -1,74 +1,79 @@
 <!DOCTYPE html>
 
 <html lang="en">
-    <head>
-        <title>label</title>
-    </head>
 
-    <body>
-        <!-- website header -->
-        <header>
-            <h1>Thsi is XXX homepage</h1>
-            <ul>
-                <li><a href="/home">home</a></li>
-                <li><a href="/about">about</a></li>
-                <li><a href="/contact">contact</a></li>
-            </ul>
-            <form target="/search">
-                <input name="q" type="search" />
-                <input type="submit" />
-            </form>
-        </header>
+<head>
+    <title>label</title>
+</head>
 
-        <nav>
-            <ol>
-                <li><a href="item-a">commodity A</a></li>
-                <li><a href="item-b">commodity B</a></li>
-                <li>commodity C</li>
-            </ol>
-        </nav>
+<body>
+    <!-- website header -->
+    <header>
+        <h1>Thsi is XXX homepage</h1>
+        <ul>
+            <li><a href="/home">home</a></li>
+            <li><a href="/about">about</a></li>
+            <li><a href="/contact">contact</a></li>
+        </ul>
+        <form target="/search">
+            <input name="q" type="search" />
+            <input type="submit" />
+        </form>
+    </header>
 
-        <!-- mian part of website -->
-        <main>
-            <!-- article header -->
-            <article>
-                <header>
-                    <h2>title</h2>
-                    <p>first paragraph</p>
-                    <p>fetch150zy at 2022.10.12</p>
-                </header>
+    <nav>
+        <ol>
+            <li><a href="item-a">commodity A</a></li>
+            <li><a href="item-b">commodity B</a></li>
+            <li>commodity C</li>
+        </ol>
+    </nav>
 
-                <section>
-                    <p>first</p>
-                    <p>...</p>
-                </section>
-                <section>
-                    <p>second</p>
-                    <p>...</p>
-                </section>
-                <p>main article</p>
-                <aside>
-                    <p>important</p>
-                </aside>
+    <!-- mian part of website -->
+    <main>
+        <!-- article header -->
+        <article>
+            <header>
+                <h2>title</h2>
+                <p>first paragraph</p>
+                <p>fetch150zy at 2022.10.12</p>
+            </header>
 
-                <footer>
-                    <p>© copyright</p>
-                </footer>
-            </article>
-        </main>
+            <section>
+                <p>first</p>
+                <p>...</p>
+            </section>
+            <section>
+                <p>second</p>
+                <p>...</p>
+            </section>
+            <p>main article</p>
+            <aside>
+                <p>important</p>
+            </aside>
 
-        <hgroup>
-            <h1>Heading 1</h1>
-            <h2>Subheading 1</h2>
-            <h2>Subheading 2</h2>
-        </hgroup>
+            <footer>
+                <p>© copyright</p>
+            </footer>
+        </article>
+    </main>
 
-        <aside>
-            comment here
-        </aside>
+    <hgroup>
+        <h1>Heading 1</h1>
+        <h2>Subheading 1</h2>
+        <h2>Subheading 2</h2>
+    </hgroup>
 
-        <footer>
-            <p>© 2022 on XDU</p>
-        </footer>
-    </body>
+    <aside>
+        comment here
+    </aside>
+
+    <footer>
+        <p>© 2022 on XDU</p>
+    </footer>
+    <p>一些字符</p>
+    <p>&lt; &gt; &quot; &apos; &amp; &copy; &num; &sect; &yen; &dollar; &pound; &cent; &percnt; &ast; &commat; &Hat;
+        &plusmn; &nbsp;</p>
+</body>
+
 </html>
