--- a/css/mi/index.html
+++ b/css/mi/index.html
@@ -1,73 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        * {
-            padding: 0;
-            margin: 0;
-        }
-
-        ul li {
-            border-radius: 10px;
-            display: inline-block;
-            width: 234px;
-            height: 300px;
-            background-color: #eee;
-            text-align: center;
-            overflow: hidden;
-        }
-
-        .imgs {
-            margin: 0 auto;
-            margin-top: 20px;
-        }
-
-        p {
-            margin-top: 6px;
-        }
-
-        .price {
-            text-align: center;
-            font-size: 14px;
-            color: orange;
-        }
-
-        h3 {
-            text-align: center;
-            font-size: 15px;
-            margin-top: 10px;
-            height: 24px;
-        }
-
-        .inline-div {
-            float: left;
-            margin-left: 10px;
-            min-height: 1px;
-        }
-
-        .box-hd {
-            height: 60px;
-            line-height: 60px;
-            text-indent: 1em;
-            background-color: gray;
-        }
-
-        div h2 {
-            width: fit-content;
-            display: block;
-        }
-
-        .pos-right {
-            position: absolute;
-            top: 0;
-            right: 2em;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
